align fixed on category page

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -66,7 +66,7 @@
   margin: auto;
   font-size: 16px;
   font-weight: bold;
-  margin-left: -273px;
+  margin-left: -290px;
   margin-top: 12px;
 }
 .card-courses {
@@ -74,7 +74,7 @@
   font-size: 16px;
   color: #505050;
   margin-top: 4px;
-  margin-left: 20px;
+  margin-left: 16px;
   font-weight: bold;
   margin-top: 20px;
 }
